updated tags system

--- a/src/index.html
+++ b/src/index.html
@@ -14,9 +14,6 @@
 
 <header class="header">
     <div class="header-controls">
-        <button class="header-btn" id="filterBtn" title="Filtrer">
-            <i class="fas fa-filter"></i>
-        </button>
         <button class="header-btn" id="statsBtn" title="Statistiques">
             <i class="fas fa-chart-bar"></i>
         </button>
@@ -29,15 +26,13 @@
         </div>
     </div>
     <h1 class="fade-in">FlashPharma</h1>
-    <p>Cartes pour révision</p>
 </header>
 <div class="container">
     <!-- Study Session Setup Screen -->
     <div class="session-setup" id="sessionSetup">
         <div class="setup-container fade-in">
             <div class="setup-header">
-                <h2><i class="fas fa-play-circle"></i> Nouvelle session d'étude</h2>
-                <p>Configurez votre session de révision</p>
+                <h2><i class="fas fa-play-circle"></i>Configurez votre session</h2>
             </div>
 
             <div class="setup-content">
